trunk/Archive2/b0/db61aac4687f41/output
main.cpp:14:5: error: static_assert failed "3"
    static_assert(std::is_same<TestType<char, int>, int(char, int)>::value, "3");
    ^             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
